--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": " ./src/app.js --exec babel-node -e js"
+    "start": "nodemon ./src/app.js --exec babel-node -e js"
   },
   "repository": {
     "type": "git",
