--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/LeDucDung278/node#readme",
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
@@ -31,7 +31,8 @@
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0",
     "slugify": "^1.6.5",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "nodemon": "^2.0.19"
   }
   
 }
