--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/app.js --exec babel-node -e js",
+    "start": "nodemon ./src/app.js --exec babel-node -e js",
     "dev": "nodemon ./src/app.js"
   },
   "repository": {
