--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-JWT_SECRET = daskjdldsajdja
+MONGODB_URL = mongodb+srv://dungvina:dung27082002@cluster0.ygjt13e.mongodb.net/vina-watch?retryWrites=true&w=majority
