--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/app.js --exec babel-node -e js" },
+    "start": "nodemon ./src/app.js --exec babel-node -e js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LeDucDung278/node.git"
@@ -25,6 +26,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "express-jwt": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
@@ -33,5 +35,4 @@
     "slugify": "^1.6.5",
     "uuid": "^8.3.2"
   }
-  
 }
